Content update (események, főoldal)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
     <!-- Import custom css file -->
-    <link type="text/css" rel="stylesheet" href="css/site.css">
+    <link type="text/css" rel="stylesheet" href="css/style.css">
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -29,7 +29,7 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="#!" id="brand-logo" class="brand-logo"></a>
-                    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                    <a href="#" data-target="mobile-demo" class="sidenav-trigger">☰</a>
                     <ul class="right hide-on-med-and-down">
                         <li><a onclick="openPage('fooldal');" href="#">Főoldal</a></li>
                         <li><a onclick="openPage('elozmenyek');" href="#">Előzmények</a></li>
@@ -53,6 +53,7 @@
     </div>
 
     <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/site.js"></script>
     </body>
