Fix navbar brand logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="black">
             <div class="container">
                 <div class="nav-wrapper">
-                    <a href="#!" id="brand-logo" class="brand-logo"></a>
+                    <a href="#!" id="brand-logo" class="brand-logo truncate"></a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger">☰</a>
                     <ul class="right hide-on-med-and-down">
                         <li><a onclick="openPage('fooldal');" href="#">Főoldal</a></li>
